// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dataset/Validation renders successfully 1`] = `
<div
  className="fade-in col-xs-12 validation"
>
  <h3
    className="metaheader"
  >
    BIDS Validation
  </h3>
  <Accordion
    activeKey="2"
    className="validation-wrap"
    onSelect={[Function]}
  >
    <Panel
      bsClass="panel"
      bsStyle="default"
      className="status"
      defaultExpanded={false}
      eventKey="1"
      header={
        <div
          className="super-valid"
        >
          <span
            className="dataset-status ds-success"
          >
            <i
              className="fa fa-check-circle"
            />
             Valid
          </span>
        </div>
      }
    >
      <br />
      <ValidationResults
        errors={Array []}
        warnings={Array []}
      />
    </Panel>
  </Accordion>
</div>
`;

exports[`dataset/Validation renders successfully when validating 1`] = `
<div
  className="fade-in col-xs-12 validation"
>
  <h3
    className="metaheader"
  >
    BIDS Validation
  </h3>
  <Spinner
    active={true}
    text="Validating"
  />
</div>
`;

exports[`dataset/Validation renders when the dataset is marked invalid 1`] = `
<div
  className="fade-in col-xs-12 validation"
>
  <h3
    className="metaheader"
  >
    BIDS Validation
  </h3>
  <Accordion
    activeKey="2"
    className="validation-wrap"
    onSelect={[Function]}
  >
    <Panel
      bsClass="panel"
      bsStyle="default"
      className="status"
      defaultExpanded={false}
      eventKey="1"
      header={
        <div
          className="super-valid"
        >
          <span
            className="dataset-status ds-success"
          >
            <i
              className="fa fa-check-circle"
            />
             Valid
          </span>
        </div>
      }
    >
      <div>
        This does not appear to be a BIDS dataset.
         
      </div>
      <br />
      <ValidationResults
        errors={Array []}
        warnings={Array []}
      />
    </Panel>
  </Accordion>
</div>
`;
